tmux conf for OSC52 updated

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,9 +3,13 @@ unbind C-b
 setw -g pane-base-index 1
 set -g base-index 1
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -s set-clipboard on
-set -as terminal-features ',xterm-256color:clipboard'
+set -as terminal-features ',*:clipboard'
+# Enable true color (24-bit) support
+set -ag terminal-overrides ",*256col*:Tc"
+set -ag terminal-overrides ",alacritty:Tc"
+set -ag terminal-overrides ",xterm-ghostty:Tc"
 # Enhanced OSC52 support for nested sessions and SSH
 set -g allow-passthrough on
 set -as terminal-overrides ',*:Ms=\\E]52;c;%p2%s\\7'
