--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,7 @@ set -g base-index 1
 
 set -g default-terminal "tmux-256color"
 set -s set-clipboard on
+set -ag terminal-overrides ',*:Ms=\E]52;%p1%s;%p2%s\007'
 set -as terminal-features ',*:clipboard'
 # Enable true color (24-bit) support
 set -ag terminal-overrides ",*256col*:Tc"
@@ -12,7 +13,6 @@ set -ag terminal-overrides ",alacritty:Tc"
 set -ag terminal-overrides ",xterm-ghostty:Tc"
 # Enhanced OSC52 support for nested sessions and SSH
 set -g allow-passthrough on
-set -as terminal-overrides ',*:Ms=\\E]52;c;%p2%s\\7'
 
 
 
