tmux ui updated

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,16 +18,18 @@ set -g allow-passthrough on
 
 
 # Options
-set -g status-bg default
 set -g bell-action none
 set -g set-titles on
 set -g set-titles-string "tmux (#I:#W)"
 set -g base-index 1
-#set -g status-left ""
-#set -g status-left-attr bold
-#set -g pane-active-border-bg black
-#set -g pane-active-border-fg black
 set -g remain-on-exit on
+
+# Powerline-style status bar (matching p10k rainbow theme)
+set -g status on
+set -g status-interval 1
+set -g status-position bottom
+set -g status-justify left
+set -g status-style bg=default,fg=colour250
 
 # Window options
 setw -g monitor-activity off
@@ -62,10 +64,34 @@ set -g @yank_selection_mouse 'clipboard'
 set -g @override_copy_command 'true'
 
 
-set -g pane-active-border-style fg=red,bg=red
-set -g window-status-current-style fg=white,bg=colour1,bold
-set -g window-status-last-style fg=white,bg=black
-set -g window-status-style fg=colour102,bg=black
+# Pane borders - thick colored borders (fg=bg creates solid color effect)
+set -g pane-active-border-style fg=colour33,bg=colour33
+set -g pane-border-style fg=colour237,bg=colour237
+
+# Pane border status - adds a colored bar at the top of each pane
+set -g pane-border-status top
+set -g pane-border-format "#[fg=colour250,bg=colour237]#{?pane_active,#[fg=colour117]#[bg=colour24],} #{pane_index} #{pane_current_command} "
+set -g pane-border-lines heavy
+
+# Left status: Session name with powerline
+set -g status-left-length 50
+set -g status-left "#[fg=colour232,bg=colour7,bold] 󰣇 #S #[fg=colour7,bg=default]"
+
+# Right status: disk | IP | user@host | time with powerline
+set -g status-right-length 200
+set -g status-right "#[fg=colour237,bg=default]#[fg=colour248,bg=colour237] 󰋊 #(df -h / | awk 'NR==2 {print $5\" (\"$4\" free)\"}') #[fg=colour8,bg=colour237]#[fg=colour250,bg=colour8]  #(hostname -I | awk '{print $1}') #[fg=colour0,bg=colour8]#[fg=colour3,bg=colour0] #(whoami)@#h #[fg=colour7,bg=colour0]#[fg=colour0,bg=colour7] %H:%M:%S "
+
+# Window status format (inactive windows)
+set -g window-status-format "#[fg=colour244,bg=default] #I:#W#F "
+
+# Window status format (current window) - darker blue background with light blue text
+set -g window-status-current-format "#[fg=colour24,bg=default]#[fg=colour117,bg=colour24,bold] #I:#W#F #[fg=colour24,bg=default]"
+
+# Window status format (last window) - green tint
+set -g window-status-last-style fg=colour2,bg=default
+
+# Window status separator
+set -g window-status-separator ""
 
 
 
